--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.password=admin
 
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+
+logging.level.root=ERROR
+logging.level.com.artemstukalenko.library.project_library_boot=INFO
+logging.file.name=src/main/resources/applicationLog.log
